--- a/app/index.html
+++ b/app/index.html
@@ -126,6 +126,9 @@
 <script src="scripts/services/twodservice.js"></script>
 <script src="scripts/directives/tooltipdirective.js"></script>
 <script src="scripts/controllers/modalcontroller.js"></script>
+<script src="scripts/services/d3service.js"></script>
+<script src="scripts/services/tooltip.js"></script>
+<script src="scripts/services/legendbar.js"></script>
 <!-- endbuild -->
 </body>
 </html>
