--- a/app/index.html
+++ b/app/index.html
@@ -126,7 +126,7 @@
 <script src="scripts/services/twodservice.js"></script>
 <script src="scripts/directives/tooltipdirective.js"></script>
 <script src="scripts/controllers/modalcontroller.js"></script>
-<script src="scripts/services/d3service.js"></script>
+<script src="scripts/services/svg.js"></script>
 <script src="scripts/services/tooltip.js"></script>
 <script src="scripts/services/legendbar.js"></script>
 <!-- endbuild -->
